word wrap about me fix

--- a/FeedItsolution/FeedIt/Content/Site.css
+++ b/FeedItsolution/FeedIt/Content/Site.css
@@ -359,6 +359,15 @@ border-bottom:3px solid rgba(255,255,255,0.6);
     margin-bottom: 2%;
 }
 
+.line-seperatorProfile
+{
+    height:1px;
+    background:#717171;
+    margin-top: 20%;
+    border-bottom:3px solid rgba(255,255,255,0.6);
+    margin-bottom: 2%;
+}
+
 .line-seperatorNotFoll
 {
     height:1px;
@@ -458,6 +467,7 @@ border-bottom:3px solid rgba(255,255,255,0.6);
     margin-left:28%;
     margin-right:30%;
     background-color: white;
+    
 }
 
 .borderleftright
@@ -548,6 +558,7 @@ border-bottom:3px solid rgba(255,255,255,0.6);
     border: 4px solid #EEEEEE !important;
     border-radius:10px;
     margin-bottom:0px;
+    word-wrap: break-word;
 }
 
 .wrapper
@@ -644,6 +655,7 @@ border-bottom:3px solid rgba(255,255,255,0.6);
 .groupabout
 {
    margin-top:2%;
+   word-wrap: break-word;
    
 }
 
@@ -911,6 +923,11 @@ border-style:solid;
 
 .fillSpace
 {
-    width: 10%;
-    height: 10%;
+    width: 50%;
+    height: 30px;
+}
+
+.hide
+{
+    display: none;
 }
